--- a/templates/beijing_air/index.html
+++ b/templates/beijing_air/index.html
@@ -25,7 +25,7 @@ function init() {
 			'id': timeplot
 		})
 	];
-	timeplot = Timeplot.create($("timeplot"), plotInfo);
+	timeplot = Timeplot.create(document.getElementById("timeplot"), plotInfo);
 }
 
 var resizeTimerID = null;
@@ -38,7 +38,13 @@ function onResize() {
     }
 }
 
-$(document).ready(init)
+$(document).ready(function() {
+	init()
+})
+
+$(document).resize(function() {
+	onResize();
+})
 </script>
 
 {% endblock %}
