--- a/templates/beijing_air/index.html
+++ b/templates/beijing_air/index.html
@@ -2,6 +2,7 @@
 
 {% block css.custom %}
 {{ block.super }}
+{# <link href="/media/css/forms.css" rel="stylesheet" type="text/css" media="screen"> #}
 <style type="text/css">
 #timeplot {
 	height: 300px;
@@ -14,6 +15,8 @@
 
 {% block js %}
 {{ block.super }}
+<script src="/media/js/core.js" type="text/javascript"></script>
+{{ form.media }}
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 <script src="http://api.simile-widgets.org/timeplot/1.1/timeplot-api.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -25,7 +28,7 @@ function init() {
 		gridColor: '#333',
 		axisLabelsPlacement: 'left',
 		min: 0,
-		max: 510
+		max: 500
 	});
 	var plotInfo = [
 		Timeplot.createPlotInfo({
@@ -34,9 +37,13 @@ function init() {
 			valueGeometry: aqiRange,
 			timeGeometry: new Timeplot.DefaultTimeGeometry({
 				gridColor: "#333",
-				axisLabelsPlacement: "top"
+				axisLabelsPlacement: "top",
+				min: "{{ start.date }}",
+				max: "{{ end.date }}"
 			}),
 			showValues: true,
+			lineColor: "#222",
+			fillColor: "#663300"
 		})
 	];
 	timeplot = Timeplot.create(document.getElementById("timeplot"), plotInfo);
@@ -62,6 +69,7 @@ $(document).resize(function() {
 })
 </script>
 
+
 {% endblock %}
 
 {% block title %}Counting Blue Skies in Beijing{% endblock %}
@@ -77,9 +85,16 @@ $(document).resize(function() {
 {% endblock %}
 <div id="main" class="clear">
 <div id="now" class="span-15 colborder">
-<h2>Today in Beijing:</h2>
-<h3 class="aqi">{{ today }}</h3>
-<p><strong>{{ definition.name }}</strong>: {{ definition.description }}</p>
+	<h2>Today in Beijing:</h2>
+	<h3 class="aqi">{{ today }}</h3>
+	<p><strong>{{ definition.name }}</strong>: {{ definition.description }}</p>
+	<div id="form">
+		<form action="." method="get">
+		<p class="datetime">{{ form.start.label }}: {{ form.start }}</p>
+		<p class="datetime">{{ form.end.label }}: {{ form.end }}</p>
+		<p><input type="submit" value="Go"></p>
+		</form>
+	</div>
 </div>
 
 <div id="updates" class="span-8 last">
